rest/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: rest-server
spec:
  selector:
    matchLabels:
      app: sent-app
      tier: rest
  replicas: 1
  template:
    metadata:
      labels:
        app: sent-app
        tier: rest
    spec:
      containers:
      - name: rest-server
        image: gcr.io/inspired-brand-324120/sentiment-rest:v7
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
