rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-server
  labels:
    app: sent-app
    tier: rest
spec:
  type: LoadBalancer  
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: sent-app
    tier: rest
